--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "babel-preset-env": "^1.7.0",
+    "jest": "^23.3.0",
     "konva": "^2.1.7",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
@@ -14,7 +16,11 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "jest",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "babel-jest": "^23.2.0",
+    "react-test-renderer": "^16.4.1"
   }
 }
